--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "main": "index.html",
   "scripts": {
     "build": "node build-components.js",
-    "start": "npm run build && python -m http.server 8000",
-    "start:windows": "npm run build && python -m http.server 8000",
-    "dev": "npm run build && echo 'Open http://localhost:8000/index-built.html in your browser'"
+    "start": "npm run build && python -m http.server 8000 --directory public",
+    "start:windows": "npm run build && python -m http.server 8000 --directory public",
+    "dev": "npm run build && echo 'Open http://localhost:8000 in your browser'",
+    "vercel-build": "node build-components.js",
+    "clean": "rmdir /s /q public 2>nul || rm -rf public",
+    "prebuild": "npm run clean"
   },
   "keywords": [
     "eye-care",
